envoy/envoy.yaml
  static_resources:
    listeners:
      - address:
          socket_address: { address: 0.0.0.0, port_value: 50051 }
        filter_chains:
          - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  codec_type: http2
                  stat_prefix: ingress_grpc
                  http2_protocol_options: {}
                  route_config:
                    name: service_route
                    virtual_hosts:
                      - name: service_host
                        domains:
                          - "*"
                        routes:
                          - match:
                              prefix: "/"
                              grpc: {}
                            route:
                              cluster: service_cluster
                              timeout:
                                seconds: 0
                                nanos: 0
                  http_filters:
                    # - name: envoy.filters.http.adaptive_concurrency
                    #   typed_config:
                    #     "@type": type.googleapis.com/envoy.extensions.filters.http.adaptive_concurrency.v3.AdaptiveConcurrency
                    #     gradient_controller_config:
                    #       sample_aggregate_percentile:
                    #         value: 90
                    #       concurrency_limit_params:
                    #         concurrency_update_interval: 0.1s
                    #         max_concurrency_limit: 10000
                    #       min_rtt_calc_params:
                    #         jitter:
                    #           value: 10
                    #         buffer:
                    #           value: 100
                    #         interval: 30s
                    #         request_count: 50
                    #     enabled:
                    #       default_value: true
                    #       runtime_key: "adaptive_concurrency.enabled"
                    - name: envoy.filters.http.router
                      typed_config: {}
    clusters:
      - name: service_cluster
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        http2_protocol_options:
          max_concurrent_streams: 500
        load_assignment:
          cluster_name: service_cluster
          endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: server-1, port_value: 50051 }
              - endpoint:
                  address:
                    socket_address: { address: server-2, port_value: 50051 }
        circuit_breakers:
          thresholds:
            - priority: default
              max_connections: 2
              max_pending_requests: 100
              max_requests: 300
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
